--- a/WeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="25dp"
-    android:background="@drawable/images"
-    tools:context=".MainActivity">
+    android:background="@color/black"
+    tools:context=".MainActivity"
+    android:id="@+id/drawLayout"
+    android:descendantFocusability="blocksDescendants">
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/NavigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:headerLayout="@layout/header_menu"
+        app:menu="@menu/menu"
+        android:layout_gravity="start"/>
 
     <RelativeLayout
-        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                <Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/imageMenu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_menu" />
+                </Toolbar>
+            </com.google.android.material.appbar.AppBarLayout>
+        </RelativeLayout>
+
+        <fragment
+            android:id="@+id/navHostFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/bar"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/main" />
+        <!--<RelativeLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bar"
+
+
+        android:layout_below="@id/bar"
+        android:id="@+id/mainContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="visible">
 
         <LinearLayout
@@ -339,6 +390,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="Something went wrong"
-        android:visibility="gone" />
-
-</RelativeLayout>
+        android:visibility="gone" />-->
+    </RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
