--- a/WeatherApp/app/src/main/res/layout/fragment_add_place.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_add_place.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,25 +18,32 @@
            android:text="Thêm vị trí:"
            android:textColor="@color/white"
            android:textSize="30sp"/>
-       <EditText
-           android:layout_below="@id/InputCity"
-           android:id="@+id/text3"
+
+       <SearchView
+           android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:inputType="text"
-           android:textColor="@color/white" />
-
+           android:layout_below="@id/InputCity"
+           android:queryHint="Search Here"
+           app:iconifiedByDefault="true"
+           android:textColor="@color/white"
+           android:background="@drawable/searchview_background">
+           <requestFocus />
+       </SearchView>
+       <ListView
+           android:id="@+id/listview"
+           android:layout_width="fill_parent"
+           android:layout_height="fill_parent"
+           android:layout_below="@+id/search"/>
        <RelativeLayout
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/text3"
-           android:gravity="center_horizontal">
-           <Button
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Ok" />
+           android:layout_below="@id/search"
+           android:layout_height="match_parent">
+           <ListView
+               android:id="@+id/listAddress"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"/>
        </RelativeLayout>
-
    </RelativeLayout>
 
 
