--- a/WeatherApp/app/src/main/res/values/colors.xml
+++ b/WeatherApp/app/src/main/res/values/colors.xml
@@ -8,4 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="green">#32CD32</color>
+    <color name="yellow">#F4D03F</color>
+    <color name="orange">#FF7F50</color>
+    <color name="red">#FF0000</color>
+    <color name="purple">#800080</color>
+    <color name="brown">#A52A2A</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 </resources>
